tests/vertical-slice/accept/vec_scalar_range_slice.hew
fn main() {
    let xs: Vec<i64> = Vec::new();
    xs.push(10);
    xs.push(20);
    xs.push(30);
    xs.push(40);

    let head = xs[1..3];
    println(head.len());
    println(head[0]);
    println(head[1]);
}
