tests/vertical-slice/reject/gen_capture_whole_value_let_move.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let _g = gen {
        let stolen = items;
        yield stolen.len();
    };
}
